mods/twilight/web/css/twilight-base.css
/*********************/
/*** MOD DEFAULTS ****/
/*********************/
/*.hud-long .status-cardbox {
  grid-template-columns: repeat(auto-fit, minmax(40px, 125px) );
  grid-gap: 0px;
}*/


.cancel_x {
  opacity: 0.5;
}

.card {
  position: relative;
}

.noncard {
  color: black;
  padding: 10px;
}

.card {
  position: relative;
}

.hud-header {
  max-width: 500px;
  margin: auto;
  box-shadow: 2px 2px 5px 0px rgb(0 0 0 / 75%);
}

.hud-header.soviet {
  background: linear-gradient(to right, rgba(255, 0, 0, 0.6), rgba(255, 255, 0, 0.4), rgba(255, 0, 0, 0.6));
}

.hud-header.american {
  background: linear-gradient(to right, rgba(0, 0, 255, 0.6), rgba(255, 255, 255, 0.4), rgba(0, 0, 255, 0.6));
}

/*.hud{
  pointer-events: none;
}*/

.status-message {
  padding-left: 0;
  padding-right: 0;
  border-radius: 0px;
}

.status-text-message {
  background-color: whitesmoke;
}

.status-text-menu ul li, .status ul li {
  background-color: whitesmoke;
}

.status-header {
  background-color: whitesmoke;
  border-radius: unset;
}

/* General overlays */
.rules-overlay {
  background: whitesmoke;
  padding: 0.5em 2.5em;
}


.transparent-card-overlay {
    width: 85vw;
    height: 80vh;
    display: grid;
    grid-template-columns: repeat(auto-fill, 200px);
    grid-gap: 1rem;
    background-color: transparent;
    border: 0px;
    box-shadow: none;
    overflow-y: scroll;
    justify-content: center;
}

.transparent-card-overlay .card {
    background-image: url(/twilight/img/Base.svg);
    background-size: contain;
    background-repeat: no-repeat;
    width: 200px;
    max-width: 200px;
    height: 280px;
}

.ts-overlay h1 {
  text-align: center;
}

.ts-overlay {
  border-radius: 5px;
  border: 5px solid blue;
  border-right: 5px solid red;
  border-bottom: 5px solid red;
  background-color: lightgrey;
  min-width: min(750px, 90vw);
  min-height: 50vh;
  padding: 10px 0;
}

.ts-overlay .ts-body {
  display: flex;
  flex-direction: column;
}

.ts-overlay h1 {
  font-size: 3rem;
}

.waroverlay-body {
  display: flex;
  justify-content: space-around;
  margin: 3em 1em;
}

.waroverlay-body .cardlist-container {
  min-width: unset;
  background-color: unset;
}

.warstats {
  font-size: 2em;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.warstats div {
  flex: 1;
}

.warstats .winner {
  font-size: 1.5em;
  font-weight: bold;
  flex: 2;
}

/*Stats overlay*/
tbody th {
  text-align: left;
  max-width: 70px;
}

tbody td {
  text-align: center;
}

table {
  font-size: 20px;
}

table caption {
  font-weight: bolder;
  margin: 0.5em;
}

.statistics-overlay {
  min-width: min(750px, 90vw);
  min-height: 50vh;
  padding: 10px;
  background-color: whitesmoke;
}

.statistics-round-table {
  min-width: 50vw;
  width: 100%;
  text-align: center;
}

.headline-statistics-table {
  width: 100%;
}

.china_card_status_us_faceup {
  background-color: #3277de;
}

.china_card_status_us_facedown {
  background-color: #063b8a;
}

.china_card_status_ussr_faceup {
  background-color: #8a0612;
}

.china_card_status_ussr_facedown {
  background-color: #ea3041;
}

.china_card_status {
  position: absolute;
  width: 130px;
  height: 100px;
  left: 2040px;
  top: 570px;
  color: white;
  font-weight: heavy;
  font-size: 2em;
}

.formosan_resolution {
  display: none;
  position: absolute;
  z-index: 0;
  background-image: url("/twilight/img/Formosan.png");
  background-size: cover;
}

.removecards li {
  float: left;
  min-width: 300px;
  font-size: 15px;
  list-style-type: none;
}

.game_details_select {
  max-width: 300px;
}

.game_details {
  max-width: 100%;
}

.statistics-table {
  cell-padding: 50px;
  cell-spacing: 5px;
  margin-top: 20px;
  margin-bottom: 20px;
}

.statistics-info {
  margin-top: 20px;
}

.zoom_button {
  border: 1px solid #707070;
  background-color: #646464;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  font-size: 2em;
  color: #FFFFFF;
  height: 40px;
  width: 40px;
  text-align: center;
  vertical-align: middle;
  line-height: 20px;
}

.action_round_cover {
  position: absolute;
  background-color: black;
}

body {
  font-family: arial, helvetica, sans-serif;
  font-size: 13px;
  padding: 0px;
  margin: 0px;
}

.main {
  display: grid;
  width: 100vw;
  height: 100vh;
  overflow: auto;

  margin-top: unset;
}


/** Modal **/
.modal {
  display: none;
  /* Hidden by default */
  position: fixed;
  /* Stay in place */
  z-index: 1;
  /* Sit on top */
  left: 0;
  top: 0;
  width: 100%;
  /* Full width */
  height: 100%;
  /* Full height */
  overflow: auto;
  /* Enable scroll if needed */
  background-color: rgb(0, 0, 0);
  /* Fallback color */
  background-color: rgba(0, 0, 0, 0.4);
  /* Black w/ opacity */
}

/* The Close Button */
.close {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

/* Modal Header */
.modal_header {
  padding: 2px 16px;
  color: white;
}

/* Modal Body */
.modal_body {
  padding: 2px 16px;
  color: white;
}

#modal_header_text {
  margin-top: 1em;
  margin-bottom: 0.25em;
  text-decoration: center;
}

#modal_body_text {
  margin: 1em 0 1em 0;
}

/* Modal Footer */
.modal_footer {
  display: grid;
  justify-content: center;
  align-items: center;
  padding: 2px 16px;
  color: white;
}

/* Button for closing the modal */
.modal_ok_button {
  float: right;
  padding: 12px;
  border-radius: 7px;
  margin: 10px;
  font-size: 1em;
  color: white;
  border: unset;
  color: white;
  width: 125px;
  background-color: rgb(0, 190, 10);
}

/* Modal Content */
.modal_content {
  position: absolute;
  background-color: #fefefe;
  margin: auto;
  padding: 0;
  border: 1px solid #888;
  width: 33%;
  min-width: 250px;
  max-width: 600px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  animation-name: animatetop;
  animation-duration: 0.4s;
  background: #4e4e4e;
  border-radius: 5px;
  top: 30%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.connection_monitor {
  position: fixed;
  display: none;
  min-height: 30px;
  z-index: 90000;
  background: #ef6666;
  font-size: 1.8em;
  padding: 15px;
}

.link {
  border-bottom: 1px dashed;
}

.dashed {
  border-bottom: 1px dashed;
}


.gameboard {
  position: relative;
  /*background-image: url('/twilight/img/TS Map-11.jpg');*/
  /* width: 5100px; */
  /* height: 3300px; */
  background-image: url('/twilight/img/TS Map-11-medium.jpg');
  /*background-image: url('/mods/twilight/img/TS Map-11-small.jpg');*/
  background-size: cover;
  width: 2550px;
  height: 1650px;


  /*   3D Perspective
  -webkit-transform: perspective(200px) rotateX(5deg");
  -moz-transform: perspective(200px) rotateX(5deg);
  -ms-transform: perspective(200px) rotateX(5deg);
  -o-transform: perspective(200px) rotateX(5deg);
  transform: perspective(200px) rotateX(5deg); */

}



.round {
  position: absolute;
  background-image: url("/twilight/img/Turn.svg");
  background-size: cover;
}

.action_round_us {
  position: absolute;
  background-image: url("/twilight/img/AmericanActionRound.svg");
  background-size: cover;
  display: all;
}

.action_round_ussr {
  position: absolute;
  background-image: url("/twilight/img/SovietActionRound.svg");
  background-size: cover;
  display: all;
}

.defcon {
  position: absolute;
  background-image: url("/twilight/img/Radiation_warning_symbol.svg");
  background-size: cover;
}

.vp {
  position: absolute;
  background-image: url("/twilight/img/VPs.svg");
  background-size: cover;
  transition: top 2s, left 2s;
}

.space_race_us {
  position: absolute;
  background-image: url("/twilight/img/AmericanSpaceRace.svg");
  background-size: cover;
}

.space_race_ussr {
  position: absolute;
  background-image: url("/twilight/img/SovietSpaceRace.svg");
  background-size: cover;
}

.milops_us {
  position: absolute;
  background-image: url("/twilight/img/AmericanMilitaryOperations.svg");
  background-size: cover;
}

.milops_ussr {
  position: absolute;
  background-image: url("/twilight/img/SovietMilitaryOperations.svg");
  background-size: cover;
}

.inline {
  display: inline;
}

.card {
  cursor: pointer;
}

.link {
  display: inline;
  text-decoration: underline;
  cursor: pointer;
}

.country {
  position: absolute;
  cursor: pointer;
}

.easterneurope {
  background: rgba(255, 0, 0, 0.2);
  box-shadow: -2px 2px 8px 4px pink;
}

.westerneurope {
  background: rgba(0, 0, 255, 0.2);
  box-shadow: -2px 2px 8px 4px lightblue;
}


.us,
.ussr {
  float: left;
}


.us_control {
  color: #FFFFFF;
  background-image: url("/twilight/img/AmericanInfluenceControlledBackground.png");
  background-size: cover;
  text-align: center;
  line-height: 48px;
  padding-top: 3px;
}

.us_uncontrol {
  color: #008fd5;
  background-image: url("/twilight/img/AmericanInfluenceUnControlledBackground.png");
  background-size: cover;
  text-align: center;
  line-height: 48px;
  padding-top: 3px;
}

.ussr_control {
  color: #FFFFFF;
  background-image: url("/twilight/img/SovietInfluenceControlledBackground.png");
  background-size: cover;
  text-align: center;
  line-height: 48px;
  padding-top: 3px;
}

.ussr_uncontrol {
  color: #d2232a;
  background-size: cover;
  background-image: url("/twilight/img/SovietInfluenceUnControlledBackground.png");
  text-align: center;
  line-height: 48px;
  padding-top: 3px;
}

.loader {
  width: 100%;
  max-width: 600px;
}

.event_tile {
  display: none;
  float: right;
  width: unset;
}


.cardlist-container {
  max-height: 80vh;
  min-width: 90vh;
  max-width: 80vw;
  overflow-y: auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  background: rgba(0, 0, 0, 0.4);
}

.cardlist-container .card {
  height: 30vh;
  max-height: 520px;
  width: calc(30vh * 0.72110);
  max-width: 375px;
  background-image: url("/twilight/img/Base.svg");
  z-index: 2;
  display: block;
  background-size: contain;
  background-repeat: no-repeat;
}

.cardimg {
  position: absolute;
  width: 100%;
  height: auto;
  top: 0px;
  left: 0px;
}


.hud-card {
  background-image: url("/twilight/img/Base.svg");
  background-size: contain;
  background-repeat: no-repeat;
  /*max-width: 120px;*/
}

/** adjust to account for transparency on shown cards ***/
.cardbox-menu {
  width: 65%;
  left: 48%;
  padding: 0.5em;
}

.game-cardbox {
  width: 388px;
}

.cardbox-card {
  left: 6px;
  background-image: url("/twilight/img/Base.svg");
  background-size: cover;
  background-repeat: no-repeat;
  width: 388px;
  height: 543px;
}

@media screen and (orientation: landscape) and (max-height: 600px) {
  .cardbox-card {
    height: 90vh;
    width: calc(90vh * 0.714);
  }

  .game-cardbox {
    top: 5vh;
    height: 90vh;
    width: calc(90vh * 0.714);
  }
}

@media screen and (orientation: portrait) and (max-width: 600px) {

  .cardbox-card,
  .game-cardbox {
    top: 5vh;
    width: 90vw;
    height: calc(90vw * 1.4);
  }
}

